# OpenAR

./: CMakeLists.txt  README.md  audio.cpp  audio.h  base64.cpp  base64.h  camera.cpp  camera.h  drm.h  drmdisplay.cpp  input.cpp  input.h  main.cpp  output.cpp  send2ai.cpp  send2ai.h  v4l2.cpp  v4l2.h
include/: base64.h  input.h  output.h
pt2.1/: demo  main.cpp  send2ai.cpp  v4l2.h
pt3/: app  drm.h  drmdisplay.cpp  main.cpp  send2ai.h  v4l2.cpp
src/: base64.cpp  input.cpp  main.cpp  output.cpp
